--- a/homework/hook.html
+++ b/homework/hook.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <img class="b" src="C:\Users\jjp75\Downloads\German-Shepherd_7.jpg">
+        <img class="b" src="C:\Users\jjp75\Desktop\NEXT\test2\homework\German-Shepherd_7.jpg">
         <p id="font">German Sheperd</p> 
         <p class="c">저먼 셰퍼드(독일어: Deutscher Schäferhund 도이체 셰퍼훈트[*])는 원산지가 독일로, 어깨 높이가 65cm, 몸무게가 35kg이다.
 
